# sort-quick-and-avlTree

./: .gitignore  CMakeLists.txt  avlTree.hpp  main.cpp  quickSort.hpp
experiments/: Experiment1Decreasing.xlsx  Experiment1Increasing.xlsx  Experiment1Pseudo.xlsx  Experiment2Decreasing.xlsx  Experiment2Increasing.xlsx  Experiment2Pseudo.xlsx
